# LSeg_Image_Encoder_TensorRT

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  demo_wordFree.sh  inf_bench.sh  inferenceTimeTester.py  main.cpp  requirements.txt  run_feature_comparison.sh  test_lseg_trt.py  test_lseg_zs.py  test_zs.py
CPP_Project/Feature_Extractor/: CMakeLists.txt  main.cpp
CPP_Project/Inference_Time_Tester/: CMakeLists.txt
Test_Code_Legacy/: test_onnx.py
Visual_Demo/: demo.py  demo.sh  demo_wordFree.py
conversion/: model_to_onnx.py  model_to_onnx_zs.py  onnx_to_trt.py  onnx_to_trt.sh  onnx_to_trt_noOption.sh  onnx_to_trt_zs.py
data/: __init__.py  ade20k.py  base.py
models/scripts/: download_from_hf.py
modules/: lseg_full.py  lseg_module.py  lseg_module_zs.py
modules/models/: lseg_blocks.py  lseg_blocks_zs.py  lseg_net.py  lseg_net_zs.py  lseg_vit.py  lseg_vit_zs.py
modules/scripts/: download_from_hf.py  upload_to_hf.py
output/models/: test_trt.py
python_trt_comp/: compare_features.py  compare_inputs.py  model_output.py
